# crypto_portfolio_opt

./: README.MD  crypto_portfolio.pptx  pyproject.toml  test_portfolio.html
data/currencies/: AAVE_data.csv  BTC_data.csv  ENA_data.csv  ETH_data.csv  HYPE_data.csv  LINK_data.csv  MKR_data.csv  MOVE_data.csv  ONDO_data.csv  SOL_data.csv  TAO_data.csv  TON_data.csv  TRX_data.csv  UNI_data.csv  XRP_data.csv
src/analysis/backtest/: compute_stats.py  monte_carlo.py
src/analysis/core/: currency.py  paths.py  portfolio_optimizer.py  time_utils.py  utils.py
src/analysis/portfolio_makers/: max_sharpe.py
src/notebooks/: Toncoin Historical Data.csv  portfolio_opt.ipynb  test_portfolio.ipynb
