[tool.poetry]
name = "portfolio-opt"
version = "0.1.0"
description = ""
authors = ["borokoko <mihail.borokoko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scipy = "^1.14.1"
numpy = "^2.1.2"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
yfinance = "^0.2.44"
matplotlib = "^3.9.2"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
